# OnlineHealthcare

./: .gitignore  Directory.Build.props  HealthPlatform.slnx  docker-compose.yml
.cursor/rules/: README.md  healthcare-application-infrastructure-api.mdc  healthcare-architecture-domain.mdc  healthcare-engineering-principles.mdc  healthcare-naming-style-observability-antipatterns.mdc  healthcare-python-ai.mdc  healthcare-security-correctness-properties.mdc  healthcare-testing-data-notifications.mdc
apps/flutter/doctor_mobile/: README.md  pubspec.yaml
apps/flutter/patient_mobile/: README.md  pubspec.yaml
apps/web/: package-lock.json  package.json
infra/docker/: docker-compose.yml  otel-collector-config.yaml
infra/graphql-gateway/: gateway.mjs  package.json
infra/istio/: destinationrule-tls.yaml  peerauthentication-mtls.yaml
infra/k8s/namespaces/: data.yaml  (+4 more)
planning/: design.md  mvp.md  requirements.md  tasks.md
services/ai/: pyproject.toml
services/ai/src/healthplatform_ai/: __init__.py  main.py
src/HealthPlatform.API/: HealthPlatform.API.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/HealthPlatform.Application/: DependencyInjection.cs  HealthPlatform.Application.csproj
src/HealthPlatform.Infrastructure/: DependencyInjection.cs  HealthPlatform.Infrastructure.csproj
src/dotnet/: HealthPlatform.sln  HealthPlatform.slnx
src/python/libs/health_platform_base/: pyproject.toml
src/python/libs/health_platform_base/health_platform_base/: __init__.py  app.py  telemetry.py
tests/HealthPlatform.Tests/: HealthPlatform.Tests.csproj
(+2058 files in other folders)
