[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthplatform-ai"
version = "0.1.0"
description = "HealthPlatform.AI — internal FastAPI services"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29.0",
]

[project.scripts]
healthplatform-ai = "healthplatform_ai.main:run"

[tool.setuptools.packages.find]
where = ["src"]
