[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-platform-base"
version = "0.1.0"
description = "Shared FastAPI/OpenTelemetry bootstrap for Health Platform AI services"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-logging>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["health_platform_base*"]
